# stm32f429_rust

./: Cargo.toml  memory.x
.cargo/: config
src/: clocking.rs  logger.rs  main.rs  sdram.rs  timers.rs
src/sdio/: card.rs  card_status.rs  cid.rs  csd.rs  mod.rs  ocr.rs  sdio_api.rs  sdio_dma.rs
